## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

# Old doc:
# e.g. install as-is
#doc_DATA=fao-testdiary.xml index.xml site-frag.xml tabs-frag.xml

# List all md files that should be created from source files in the
# MD_PAGES variable. The filename pattern is as follows:
#
# dir/filename.lexc => filename-dir.md

MD_PAGES=root-morphology.md       \
		  abbreviations-affixes.md     \
		  acronyms-affixes.md     \
		  adjectives-affixes.md   \
		  adjectives-stems.md     \
		  nouns-affixes.md        \
		  nouns-stems.md          \
		  numerals-stems.md          \
		  numerals-affixes.md          \
		  propernouns-affixes.md  \
		  symbols-affixes.md      \
		  verbs-affixes.md        \
		  verbs-stems.md          \
		  phonology-morphology.md

include $(top_srcdir)/../giella-core/am-shared/docs-dir-include.am


# clitics-morphology.md       \
# compounding-morphology.md   \
# abbreviations-stems.md      \
# acronyms-stems.md           \
# adpositions-stems.md        \
# adverbs-stems.md            \
# conjunctions-stems.md       \
# interjections-stems.md      \
# numerals-stems.md           \
# particles-stems.md          \
# pronouns-stems.md           \
# propernouns-stems.md        \
# punctuation-stems.md        \
# smi-propernouns-stems.md    \
# subjunctions-stems.md       \
# adjectives-affixes.md       \
#
